--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,11 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+    
+    /* Image modules */
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
